--- a/my-next-app/styles/components/modal.module.scss
+++ b/my-next-app/styles/components/modal.module.scss
@@ -13,7 +13,7 @@
 }
 
 .modal {
-  background-color: rgb(var(--primaryColor));
+  background-color: rgb(var(--white));
   padding: 10px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
