--- a/my-next-app/styles/components/navigation.module.scss
+++ b/my-next-app/styles/components/navigation.module.scss
@@ -1,4 +1,5 @@
-@use "../mixins.module.scss" as mixins;
+@use "../mixins.scss" as mixins;
+@import '../mixins';
 
 .parent{
     width: 100vw;
@@ -6,9 +7,12 @@
     display: flex;
     justify-content:space-between;
     align-items: center;
-    background-color: rgb(var(--primaryColor));
+    background-color: rgb(var(--white));
     margin: 0;
-    position: fixed 
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    padding: 0 15px; 
 }
 
 
@@ -19,17 +23,10 @@
  } 
 
 .section1{
-    width: 300px;
+    width: 500px;
     height: 60px;
     display: flex;
     justify-content: left;
-    align-items: center;
-}
-
-.section2{
-    width: 300px;
-    display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -47,13 +44,29 @@
     }
  }
 
-.CFAButton{
-    @include mixins.CFAButton();
-    margin: 0 20px;
+
+
+.linkBtn{
+  color: rgb(var(--black)); 
+  font-family: inter;
+  text-decoration: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0 15px;
+  letter-spacing: 1px;
+  transition: .25s ease;
+  font-size: 16px;
+
+  &:hover {
+    text-decoration: underline; 
+  }
 }
 
 .link {
-    color: rgb(var(--secondaryColor)); /* Sets the default color for links */
+    font-family: inter;
+    font-weight: normal;
+    color: rgb(var(--black)); 
+    background-color: transparent;
     text-decoration: none;
     margin: 0 5px;
     letter-spacing: 1px;
@@ -68,6 +81,7 @@
     display: flex;
     flex-wrap: wrap;
     list-style-type: none;
+    margin-left: 10px;
     
     li {
       margin-left: .45em;
@@ -86,7 +100,7 @@
   }
 
   .span{
-    margin: 0 3px 0 10px;
+    margin: 0 30px 0 10px;
   }
 
   .link{
@@ -98,6 +112,12 @@
   .exitBtn{
     @include mixins.exitBtn();
   }
+
+  .CFAButton{
+    @include CFAButton;
+  }
+
+ 
 
 
 
