--- a/my-next-app/styles/globals.scss
+++ b/my-next-app/styles/globals.scss
@@ -9,9 +9,14 @@
 
   --orange: 255, 196, 80;
   --red: 176, 79, 79;
+
+  //Shadow color: 
+  --grey: 181, 181, 181;
   
   --smallRadius: 5px;
   --bigRadius: 10px;
+
+ 
 
 }
 
