--- a/my-next-app/styles/components/modal.module.scss
+++ b/my-next-app/styles/components/modal.module.scss
@@ -1,5 +1,7 @@
+@import '../mixins';
+
 /* styling Modal*/
-.overlay {
+.modalOverlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -12,12 +14,40 @@
   z-index: 1000; /* Ensure it's on top of other content */
 }
 
-.modal {
+.modalContent {
   background-color: rgb(var(--white));
   padding: 10px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  max-width: 90%;
-  max-height: 90%;
-  overflow-y: auto; /* If content overflows, make it scrollable */
+  width: 500px;
+  height: fit-content;
+  overflow-y: auto; 
+
+  .h2{
+     font-family: Inter;
+     margin-bottom: 5px;
+  }
+}
+
+.closeButton {
+  margin-bottom: 10px;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.textarea {
+  width: 100%;
+  height: 100px;
+  padding: 5px;
+  font-family: Inter;
+  font-size: 16px;
+  margin: 10px 0 5px 0;
+  border-radius: var(--smallRadius);
+  border: 1px solid rgb(var(--grey));
+}
+
+.submitButton {
+  @include CFAButton();
 }
