--- a/my-next-app/styles/components/post.module.scss
+++ b/my-next-app/styles/components/post.module.scss
@@ -81,4 +81,24 @@
  .toggleButton{
    background-color: transparent;
    border: 0;
+   cursor: pointer;
+ }
+
+ .successMessage {
+   z-index: 1000;
+   width: 550px;
+   height: 50px;
+   display: flex;
+   margin-left: 10px;
+   justify-content: center;
+   align-items: center;
+   font-family: Inter;
+   font-weight: bold;
+   font-size: 16px;
+   padding: 10px;
+   background-color: #d4edda;
+   color: #155724;
+   border: 1px solid #c3e6cb;
+   border-radius: 5px;
+   text-align: center;
  }
