--- a/my-next-app/styles/components/icons.module.scss
+++ b/my-next-app/styles/components/icons.module.scss
@@ -1,3 +1,29 @@
 .LogoSmall{
     margin-top: 7px;
 }
+
+.stars{
+    position: absolute;
+    z-index: 1000;
+    top: 100px;
+    left: 100px;
+    animation: stars 3s ease-in-out infinite;
+}
+
+@keyframes stars {
+    0%, 100% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+  }
+
+  .report {
+    margin: 5px;
+  }
+
+  .comment2 {
+    margin: 5px;
+  }
+
