--- a/my-next-app/styles/pages/forms.module.scss
+++ b/my-next-app/styles/pages/forms.module.scss
@@ -1,30 +1,117 @@
 @use "../mixins.scss" as mixins;
 @import '../mixins';
 
-.CFAButton{
-   @include CFAButton;
-   width: 100%;
-   margin: 10px 0 20px 0;
-}  
+.loginForm{
+  height: fit-content;
+  width: 900px;
+  margin-top: 50px;
+  padding: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 3px solid rgb(var(--grey));
+  @include bigShadow;
+  border-radius: var(--bigRadius);
+}
 
- .para{
+.child1 {
+  width: 550px;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-right: 1px solid rgb(var(--black));
+  box-sizing: border-box;
+}
+
+.h1 {
+  font-family: Monofett;
+  font-size: 80px;
+  text-align: center;
+}
+
+.child2 {
+  width:300px;
+  height: fit-content;
+  padding: 0px 20px;
+  box-sizing: border-box;
+}
+
+.CFAButton {
+   @include CFAButton;
+   margin-bottom: 5px;
+   margin-top: 0;
+   width: 100%;
+} 
+
+.devider{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  height: 15px;
+  align-items: center;
+  margin: 10px 0;
+
+  .p{
+    width: fit-content;
+    margin: 0 5px;
+  }
+
+  .hr{
+    width: 100px;
+    height: 1px;
+  }
+}
+
+.fbButton{
+  @include fbButton;
+  width: 100%;
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  color: rgb(var(--white));
+}
+
+.GoogleButton{
+  @include googleButton;
+  width: 100%;
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.fbButton2 {
+  @include fbButton;
+  margin: 5px;
+}
+
+.GoogleButton2 {
+  @include googleButton;
+  margin: 5px;
+}
+
+ .para {
     font-size: 16px;
     display: block;
     margin: auto;
  }
 
- .socials{
+ .socials {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
 
-    .para{
+    .para {
         font-size: 14px;
         color: rgb(var(--secondaryColor));
     }
 
-    .signUp{
+    .signUp {
         font-family: Inter;
         font-weight: bold;
         font-size: 20px;
@@ -33,7 +120,7 @@
  }
 
 
- .signUp{
+ .signUp {
     border: none;
     cursor: pointer;
     @include mixins.link();
@@ -45,13 +132,12 @@
     font-size: 16px;
     background-color: transparent;
     color: rgb(var(--secondaryColor));
-
   }
 
-  .h1{
+  .h2{
     display: block;
     text-align: left;
-    margin: 30px 0 15px;
+    margin: 10px 0 15px;
     font-family: Inter;
     font-weight: 600;
     color: rgb(var(--secondaryColor));
@@ -79,69 +165,23 @@
   .error {
    color: rgb(var(--red));
    font-size: 12px; // Smaller font size
-   margin-bottom: 15px;
    font-family: inter;
    font-weight: lighter;
  }
 
  .avatarDiv{
-   height: fit-content;
+   height: 50px;
    display: flex;
    flex-wrap: wrap;
  }
 
- .avatarLabel{
-   display: flex;
-   flex-direction: column-reverse;
-   width: fit-content;
-   justify-content: center;
-   align-items: center;
-   margin-top: 5px;
-
-   input{
-      width: 18px;
-      height: 18px;
-      margin: 0;
-   }
+ .avatarP{
+  font-size: 14px;
  }
-
-
 
  .note{
    font-size: 12px;
    margin-bottom: 10px;
- }
-
- .select {
-   width: 100%;
-   height: 50px;
-   margin: 5px 0 5px 0;
-   padding: 5px 0 5px 0;
-   border: 0;
-   border-radius: 0;
-   border-bottom: 1px solid rgb(var(--black));
-   font-family: inter;
-   color: gray;
-   font-size: 16px;
-   appearance: none; /* Remove default arrow */
-   background-color: rgb(var(--white));
-   background-image: url('/path/to/your/custom-arrow.svg'); /* Add custom arrow */
-   background-repeat: no-repeat;
-   background-position: right 10px center;
- 
-   &:focus {
-     border-color: orange; /* Change border color when focused */
-     outline: none;
-   }
-
-   option:hover{
-      background-color: rgb(var(--orange));
-   }
-   
-   option:checked {
-      /* Change background color of selected option */
-     color: white; /* Change text color of selected option */
-   }
  }
 
  .socialIcons{
@@ -149,25 +189,51 @@
    padding-bottom: 20px;
  }
 
- .socialBtn{
-   width: 100%;
-   background-color: blue;
-   font-family: inter;
-   font-size: 18px;
-   padding: 10px 10px;
-   margin: 5px 0;
-   border-radius: var(--bigRadius);
-   border: 1px solid rgb(var(--white));
-   color: rgb(var(--white));
+ .dropDownDiv{
+  display: flex;
+  justify-content: space-between;
  }
- .socialBtn2{
-   width: 100%;
-   background-color: red;
-   font-family: inter;
-   font-size: 18px;
-   padding: 10px 10px;
-   margin: 5px 0;
-   border-radius: var(--bigRadius);
-   border: 1px solid rgb(var(--white));
-   color: rgb(var(--white));
+
+ .select2 {
+  height: 40px;
+  width: 120px;
+  padding: 10px 5px; 
+  background-color: rgb(var(--white));
+  font-size: 12px;
+  margin: 5px 0;
+  border-radius: var(--bigRadius);
+  font-family: Inter;
+  cursor: pointer;
  }
+
+ .socialLogin {
+  display: flex;
+  justify-content: center;
+ }
+
+ /* Hide the default radio button */
+.avatarLabel input[type="radio"] {
+  display: none;
+}
+
+/* Style the label to display the image */
+.avatarLabel {
+  display: inline-block;
+  cursor: pointer;
+  margin: 5px 0px;
+}
+
+/* Style the image inside the label */
+.avatarLabel img {
+  width: 50px; /* Adjust size as needed */
+  height: 50px; /* Adjust size as needed */
+  border: 5px solid transparent; /* Add border for selected state */
+  border-radius: 50%; /* Make the image circular */
+  transition: border-color 0.3s;
+  margin-bottom: 0;
+}
+
+/* Add a border to the image when its radio button is selected */
+.avatarLabel input[type="radio"]:checked + img {
+  border-color: rgb(var(--orange)); 
+}
