--- a/my-next-app/styles/pages/admin.module.scss
+++ b/my-next-app/styles/pages/admin.module.scss
@@ -17,5 +17,65 @@
     .p{
         font-family: Inter;
         font-size: 20px;
+        margin-bottom: 0;
     }
+}
+
+.textSection2 {
+    margin-top: 50px;
+    text-align: center;
+
+    .p{
+        font-family: Inter;
+        font-size: 20px;
+        margin-bottom: 0;
+    }
+}
+
+.reportsSection {
+    width: 100vw;
+    text-align: center;
+    padding: 20px;
+
+    .th {
+        font-family: Inter;
+        font-weight: bold;
+        padding: 10px;
+        border: 1px solid rgb(var(--black));
+
+    }
+
+    .td {
+        font-family: Inter;
+        padding: 10px;
+        border: 1px solid rgb(var(--black));
+        
+    }
+
+    .reportTable{
+      margin: auto;
+      border: 1px solid rgb(var(--black));
+    }
+}
+
+.child3 {
+    width: 500px;
+    margin: auto;
+    padding: 50px;
+
+    .searchDiv {
+        width: 340px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+
+    .CFAButton {
+        @include CFAButton;
+        margin-left: 10px;
+    }
+}
+
+.DeleteBtn{
+    @include DeleteButton;
+    margin-top: 10px;
 }
