--- a/my-next-app/styles/components/comment.module.scss
+++ b/my-next-app/styles/components/comment.module.scss
@@ -95,6 +95,31 @@
   cursor: pointer;
 }
 
+.successMessage {
+  z-index: 1000;
+  width: 550px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Inter;
+  font-weight: bold;
+  font-size: 16px;
+  padding: 10px;
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+  text-align: center;
+}
+
+@media screen and (max-width: 585px) {
+
+      .successMessage {
+        width: 100%;
+      }
+}
+
 
 
 
