--- a/my-next-app/styles/components/components.module.scss
+++ b/my-next-app/styles/components/components.module.scss
@@ -20,3 +20,27 @@
    }
 }
 
+@media screen and (max-width: 500px) {
+
+   .SeparationParent{
+      width: 100vw;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   
+      .line{
+       width: 150px;
+       height: 150px;
+       border-bottom: 1px solid rgb(var(--black));
+      }
+   
+      .line2{
+       width: 250px;
+       height: 150px;
+      }
+   }
+ 
+}   
+
