--- a/my-next-app/styles/components/hamburgerMenu.module.scss
+++ b/my-next-app/styles/components/hamburgerMenu.module.scss
@@ -1,63 +1,122 @@
-@use "../mixins.scss" as mixins;
+// styles/components/hamburger.module.scss
 
-
-.parent{
-    width: 100vw;
-    height: 60px;
-    background-color: (rgb(var(--primaryColor)));
-    justify-content:space-between;
-    align-items: center;
-    padding: 10px;
-    display: none;
-    position: fixed;
+.nav {
+  position: relative;
 }
 
-@media (max-width: 800px){
-   .parent{
-
-    display: flex;
-   }
+.parent {
+  height: 60px;
+  position: fixed;
+  z-index: 3000;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: rgb(var(--white));
 }
 
-.section1{
-    height: 60px;
-    width: 300px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.section2{
-    height: 60px;
-    width: 300px;
-    display: flex;
-    justify-content: right;
-    align-items: center;
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.5s ease;
 }
 
-.hamburger{
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
+.hamburger.active {
+  animation: rotate90 0.5s forwards;
 }
 
-.dropdown {
-    position: absolute;
-    top: 60px; /* Adjust based on your layout */
-    left: 0;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
+@keyframes rotate90 {
+  from {
+    transform: rotate(0deg);
   }
-  
-  .dropLink {
-    display: block;
-    padding: 10px;
-    color: black;
-    text-decoration: none;
+  to {
+    transform: rotate(90deg);
   }
-  
-  .dropLink:hover {
-    background-color: #f0f0f0;
-  }
+}
 
+.line {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: rgb(var(--black));
+  transition: background-color 0.5s ease;
+}
+
+
+.ul {
+  list-style: none;
+  display: none; /* Initially hidden */
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+  height: 100vh;
+  margin-top: 10px;
+  background-color: rgb(var(--white), 0.95);
+}
+
+.menuOpen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 49px;
+  z-index: 3000;
+}
+
+.link,
+.CFAButton {
+  text-decoration: none;
+  font-family: Inter;
+  font-weight: bold;
+  color: rgb(var(--black));
+  font-size: 38px;
+  margin: 5px auto;
+  text-align: center;
+  display: block;
+  transition: letter-spacing 1s ease; 
+
+  &:hover {
+     letter-spacing: 3px;
+     font-size: 40px;
+  }
+}
+
+.linkBtn {
+  color: rgb(var(--orange));
+  font-family: Monofett;
+  font-weight: bold;
+  font-size: 68px;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0);
+  border: 0;
+  cursor: pointer;
+  transition: font-size 1s ease; 
+
+  &:hover {
+    letter-spacing: 3px;
+    font-size: 80px;
+ }
+}
+
+.CFAButton:last-child {
+  border-bottom: none;
+}
+
+ 
