--- a/my-next-app/styles/components/icons.module.scss
+++ b/my-next-app/styles/components/icons.module.scss
@@ -2,18 +2,48 @@
     margin-top: 7px;
 }
 
-.globe {
-  width: 303px;
+.loginImgGlobe {
+  width: 403px;
   height: 322px;
 }
 
-.stars{
-    position: absolute;
-    z-index: 1000;
-    top: 100px;
-    left: 100px;
-    animation: stars 3s ease-in-out infinite;
+
+
+.StarsRating {
+   width: 155px;
+   height: 121px;
 }
+
+@media screen and (max-width: 552px) {
+
+  .StarsRating {
+    width: 105px;
+    height: 101px;
+ }
+}
+
+.WritePostIcon {
+  width: 127px; 
+  height: 101px;
+}
+
+@media screen and (max-width: 552px) {
+
+  .WritePostIcon {
+    width: 90px; 
+    height: 90px;
+  }
+}
+
+
+.stars{
+  position: absolute;
+  z-index: 1000;
+  top: 100px;
+  left: 100px;
+  animation: stars 3s ease-in-out infinite;
+}
+
 
 @keyframes stars {
     0%, 100% {
@@ -43,10 +73,11 @@
 
   @media screen and (max-width: 746px) {
 
-    .globe {
-      width: 253px;
-      height: 222px;
-    }
+ 
+.loginImgGlobe {
+  width: 253px;
+  height: 222px;
+}
   
     .stars{
       top: 150px;
@@ -57,18 +88,157 @@
   
   }
 
-  @media screen and (max-width: 746px) {
+  @media screen and (max-width: 640px) {
 
-    .globe {
-      width: 253px;
+    .loginImgGlobe {
+      width: 203px;
       height: 222px;
     }
   
     .stars{
-      top: 70px;
+      top: 80px;
       left: -20px;
       height: 120px;
       width: 100px;
   }
   
   }
+
+
+  .globeHomepage {
+    width: 686px; 
+    height: 475px;
+  }
+
+  @media screen and (max-width: 1055px) {
+
+    .globeHomepage {
+      width: 600px; 
+      height: 400px;
+    }
+  
+  }
+
+  @media screen and (max-width: 820px) {
+
+    .globeHomepage {
+      width: 500px; 
+      height: 300px;
+    }
+  
+  }
+
+  //
+  @media screen and (max-width: 673px) {
+
+    .globeHomepage {
+      width: 400px; 
+      height: 200px;
+   }
+  
+  }
+
+  @media screen and (max-width: 490px) {
+
+    .globeHomepage {
+      width: 300px; 
+      height: 150px;
+    }
+  
+  }
+
+
+  // Icons for homepage components
+  .globe {
+    width:180px;
+    height:170px;
+  }
+
+  .talk {
+    width:180px;
+    height:170px;
+  }
+
+  .report2 {
+    width:160px;
+    height:170px;
+  }
+
+  @media screen and (max-width: 1092px) {
+
+    .globe {
+      width:177px;
+      height:168px;
+    }
+  
+  }
+
+  @media screen and (max-width: 963px) {
+
+    .globe {
+      width:130px;
+      height:130px;
+    }
+  
+    .talk {
+      width:130px;
+      height:130px;
+    }
+  
+    .report2 {
+      width:120px;
+      height:130px;
+    }
+  
+  }
+
+  @media screen and (max-width: 751px) {
+
+    .globe {
+      width:100px;
+      height:100px;
+    }
+  
+    .talk {
+      width:100px;
+      height:100px;
+    }
+  
+    .report2 {
+      width:90px;
+      height:100px;
+    }
+  }
+
+  .mail {
+    width: 755px;
+    height: 516px;
+  }
+
+  @media screen and (max-width: 869px) {
+
+    .mail {
+      width: 655px;
+      height: 416px;
+    }
+
+  }
+
+  @media screen and (max-width: 690px) {
+  
+    .mail {
+      width: 555px;
+      height: 316px;
+    }
+  }
+
+  @media screen and (max-width: 496px) {
+  
+    .mail {
+      width: 435px;
+      height: 236px;
+    }
+  }
+
+
+
