--- a/my-next-app/styles/pages/rmt.module.scss
+++ b/my-next-app/styles/pages/rmt.module.scss
@@ -7,6 +7,28 @@
  margin-top: 80px;
 }
 
+.warning {
+   position: fixed;
+   top: 60px;
+   background-color: rgba(0, 0, 0, 0.424);
+   height: 100vh;
+   width: 100vw;
+   z-index: 3000;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 50px;
+
+   .warningText {
+      font-family: Inter;
+      font-weight: bold;
+      color: rgb(var(--orange));
+   }
+
+}
+
+
+
 .MapDiv{
    height: auto;
    width: 80vw;
@@ -42,12 +64,7 @@
      }
  }
 
- @media screen and (max-width: 452px) {
-   
-   .parent{
-    
-     }
- }
+
 
 .RateDiv {
    position: fixed;
