--- a/my-next-app/styles/globals.scss
+++ b/my-next-app/styles/globals.scss
@@ -1,13 +1,14 @@
 @use './mixins.scss' as mixins;
 // Variables
 :root {
-  --yellow: 255, 234, 41;
+  --yellow: 248, 241, 178;
   --blue: 40, 119, 153;
   --lightBlue: 138, 220, 255;
   --black: 0, 0, 0;
   --white: 252, 251, 251;
 
   --orange: 255, 196, 80;
+  --orange2: 232, 165, 37;
   --red: 255, 43, 43;
 
   //Shadow color: 
