--- a/my-next-app/styles/mixins.scss
+++ b/my-next-app/styles/mixins.scss
@@ -54,12 +54,14 @@
 
 @mixin CFAButton{
 
+  display: flex;
+  align-items: center;
     font-family: Inter;
-    font-weight: 500;
     color: rgb(var(--black));
     border: solid 2.5px rgb(var(--black));
     outline: 0;
-    padding: 7px 10px;
+    padding: 7px 15px 5px 0;
+    width: fit-content;
     font-size: 1rem;
     letter-spacing: 0;
     background-color: rgb(var(--orange));
@@ -72,9 +74,10 @@
         position: absolute;
         top: 0;
         left: 0;
+        font-weight: bold;
         width: 90%;
         height: 90%;
-        background-color: rgb(var(--orange));
+        background-color: rgb(var(--orange2));
         z-index: -1;
         border-radius: var(--bigRadius);
         border: solid 2px rgb(var(--white));
@@ -84,10 +87,51 @@
     &:hover::after {
         width: 100%;
         height: 100%;
-        top: 5px;
-        left: 5px;
+        top: 7px;
+        left: 7px;
       }
   } 
+
+  @mixin CFAButton2{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+      font-family: Inter;
+      color: rgb(var(--black));
+      border: solid 2.5px rgb(var(--black));
+      outline: 0;
+      padding: 7px 5px;
+      width: fit-content;
+      font-size: 1rem;
+      letter-spacing: 0;
+      background-color: rgb(var(--orange));
+      border-radius: var(--bigRadius);
+      position: relative;
+      cursor: pointer; 
+      
+      &::after {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          font-weight: bold;
+          width: 90%;
+          height: 90%;
+          background-color: rgb(var(--orange2));
+          z-index: -1;
+          border-radius: var(--bigRadius);
+          border: solid 2px rgb(var(--white));
+          box-shadow:  3px 3px 5px rgb(var(--white),0.5);
+          transition: all 0.5s ease-in-out;
+      }
+      &:hover::after {
+          width: 100%;
+          height: 100%;
+          top: 7px;
+          left: 7px;
+        }
+    } 
 
   @mixin DeleteButton{
 
