--- a/my-next-app/styles/pages/home.module.scss
+++ b/my-next-app/styles/pages/home.module.scss
@@ -9,28 +9,12 @@
     background-image: url(../../public/images/yellowCircle.jpg);
     background-size: contain; /* Ensure the image fits within the div without cropping */
     background-position: center; /* Center the image */
-    background-repeat: no-repeat;
     z-index: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    animation: pulse 4s ease-in-out infinite;
 }
-
-@keyframes pulse {
-    0% {
-      background-size: 80%;
-    }
-    50% {
-      background-size: 100%; /* Adjust this percentage to control the growth */
-    }
-    100% {
-      background-size: 80%;
-    }
-  }
-  
 
 .textSection{
 
@@ -53,6 +37,35 @@
         margin-top: 40px;
     }
 }
+
+/* yourStyles.module.css */
+
+.headingContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .span {
+    display: inline-block;
+    font-family: Monofett;
+    font-size: 110px;
+    margin: 0 5px;
+    animation: textJump 1s ease-in-out forwards;
+    animation-delay: calc(var(--i) * 0.1s);
+  }
+  
+  @keyframes textJump {
+    0% {
+      transform: translateY(0);
+    }
+    100% {
+      transform: translateY(-15px);
+    }
+  }
+  
+  
+  
 
 
 @media screen and (max-width: 996px) {
